[package]
name = "hello_salvo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web框架
salvo = "0.27.0"
tokio = { version = "1", features = ["macros"] }
# 序列化工具
serde = "1.0.140"
#日志依赖
tracing = "0.1.35"
tracing-subscriber = "0.3.15"

once_cell = "1.13.0"
#数据库依赖
mysql = "20.0.0"
#处理时间
chrono = "0.4.19"