[package]
name = "hello_salvo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#web框架
salvo = "0.27.0"
tokio = { version = "1", features = ["macros"] }
# 序列化工具
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.75"
lazy_static = "1.4.0"
serde_yaml = "0.8.23"
schemars = "0.8.8"
# 工具包
anyhow = "1.0.58"
#日志依赖
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
# 一次性初始化对象工具包
once_cell = "1.13.0"
#数据库依赖
mysql = "20.0.0"
#处理时间
chrono = "0.4.19"
#读取toml文件
toml = "0.5.9"